--- a/src/app/cart/cart-update-jobsite.html
+++ b/src/app/cart/cart-update-jobsite.html
@@ -55,25 +55,25 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time lr-padding lr-padding-small">
         <div class="form-control search-div">
-          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="First Name" ng-model="cartData.ContactInfo.firstName">
           <i class="fa fa-user pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
-          <input type="text" placeholder="Last Name">
+          <input type="text" placeholder="Last Name" ng-model="cartData.ContactInfo.lastName">
           <i class="fa fa-user pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time lr-padding lr-padding-small">
         <div class="form-control search-div">
-          <input type="text" placeholder="Email">
+          <input type="text" placeholder="Email" ng-model="cartData.ContactInfo.email">
           <i class="fa fa-envelope-o pull-right"></i>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time">
         <div class="form-control search-div">
-          <input type="text" placeholder="Phone Number">
+          <input type="text" placeholder="Phone Number" ng-model="cartData.ContactInfo.phone">
           <i class="fa fa-phone pull-right"></i>
         </div>
       </div>
