--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -44,7 +44,7 @@
               </a>
             </li>
             <li>
-              <a href="#/shopping-cart/details" class="marker">
+              <a ui-sref="hm.cart.detail" class="marker">
                 <i class="fa fa-shopping-cart fa-2x marker"></i>
                 <span class="cart_noti" ng-if="cartCount">{{cartCount}}</span>
               </a>
