--- a/src/app/cart/cart-duration.html
+++ b/src/app/cart/cart-duration.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row cart-duration-cont">
   <div class="col-lg-9 col-md-8 col-sm-12 col-xs-12 leftpadding duration-leftpadding-small">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 leftpadding">
       <h3 class="heading-text devider-bottom topmargin">How long do you need it?</h3>
@@ -7,28 +7,28 @@
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time leftpadding">
       <p class="desc-text">Start Renting From</p>
       <div class="form-control search-div select-date" >
-        <input type="text"  datetime-picker="MM/dd/yyyy" enable-time="false" ng-model="cartData.fromDt" is-open="fromDtOpened"  placeholder="mm/dd/yyyy"/>
+        <input type="text"  datetime-picker="MM/dd/yyyy HH:mm:a" ng-model="cartData.rentingPeriod.fromDt" is-open="fromDtOpened"  placeholder="mm/dd/yyyy"/>
         <i class="fa fa-calendar pull-right" ng-click="fromDtOpened= !fromDtOpened"></i>
       </div>
-      <div class="form-control search-div select-date">
-        <input type="text"  datetime-picker="HH:mm" enable-date="false" ng-model="cartData.fromTime" is-open="fromTimeOpened" placeholder="HH:MM" />
+      <!--<div class="form-control search-div select-date">-->
+        <!--<input type="text"  datetime-picker="HH:mm" enable-date="false" ng-model="cartData.rentingPeriod.fromTime" is-open="fromTimeOpened" placeholder="HH:MM" />-->
 
-        <i class="fa fa-clock-o pull-right" ng-click="fromTimeOpened= !fromTimeOpened"></i>
-      </div>
+        <!--<i class="fa fa-clock-o pull-right" ng-click="fromTimeOpened= !fromTimeOpened"></i>-->
+      <!--</div>-->
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 job-site-list select-date-time duration-time rightpadding duration-rightpadding-small leftpadding-small">
       <p class="desc-text">Return Details</p>
       <div class="form-control search-div select-date">
-        <input type="text" datetime-picker="MM/dd/yyyy" enable-time="false" ng-model="cartData.toDt" is-open="toDtOpened" placeholder="mm/dd/yyyy">
+        <input type="text" datetime-picker="MM/dd/yyyy HH:mm:a"  ng-model="cartData.rentingPeriod.toDt" is-open="toDtOpened" placeholder="mm/dd/yyyy">
         <i class="fa fa-calendar pull-right" ng-click="toDtOpened= !toDtOpened"></i>
       </div>
-      <div class="form-control search-div select-date">
-        <input type="text"  datetime-picker="HH:mm" enable-date="false" ng-model="cartData.toTime" is-open="toTimeOpened" placeholder="HH:MM" />
-        <i class="fa fa-clock-o pull-right" ng-click="toTimeOpened= !toTimeOpened"></i>
-      </div>
+      <!--<div class="form-control search-div select-date">-->
+        <!--<input type="text"  datetime-picker="HH:mm" enable-date="false" ng-model="cartData.rentingPeriod.toTime" is-open="toTimeOpened" placeholder="HH:MM" />-->
+        <!--<i class="fa fa-clock-o pull-right" ng-click="toTimeOpened= !toTimeOpened"></i>-->
+      <!--</div>-->
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 select-date-heading leftpadding">
-      <h3 class="heading-text">1 week, 3 days <span class="desc-text">(if returned by 3PM, wednesday)</span></h3>
+      <h3 class="heading-text">{{cartData.rentingPeriod.span}}<span class="desc-text">(if returned by 3PM, wednesday)</span></h3>
       <p class="desc-text">You can keep it longer or shorter, but the price is based on this estimated duration.</p>
     </div>
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot nopadding"></div>
@@ -49,11 +49,12 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding-small rightpadding">
       <div class="pickup-delivery delivery-xs">
-        <input type="radio" name="get-option">
-        <span class="go-back-text">Delivery to selected Jobsite Location </span>
-        <div class="pickup-desc">
+        <input type="radio" name="get-option" ng-disabled="(cartData.selectedJobSite | isEmpty)">
+        <span class="go-back-text" >Delivery to selected Jobsite Location </span>
+        <p class="desc-text" ng-if="(cartData.selectedJobSite | isEmpty)"><i class="fa fa-exclamation-circle"></i> &nbsp No Jobsite Selected</p>
+        <div class="pickup-desc" ng-if="!(cartData.selectedJobSite | isEmpty)">
           <i class="fa fa-map-marker color-blue heading-text"></i>
-          <span class="desc-text">{{cartData.selectedJobSite.Site_Name}}</span>
+          <span class="desc-text" >{{cartData.selectedJobSite.Site_Name}}</span>
           <br>
           <p class="desc-text address">{{cartData.selectedJobSite.Address1}}</p>
           <p class="desc-text address">{{cartData.selectedJobSite.Address2}}</p>
