--- a/src/app/styles/main.css
+++ b/src/app/styles/main.css
@@ -28,7 +28,10 @@ a:focus { color: #0099cc;
 	background-size: 100% 100%;
 	height: auto;
 }
-.lift-bg{background: #f5f5f5; padding: 20PX 0;}
+.lift-bg{
+  background: #f5f5f5; padding: 20PX 0;
+  min-height: 270px;
+}
 .nopadding{padding: 0 !important;}
 .main_box{background: #ffffff; border: solid 1px #ededed; border-radius: 10px;  min-height:230px;
 	/*          width: 15%;
