--- a/src/app/cart/cart.html
+++ b/src/app/cart/cart.html
@@ -16,46 +16,46 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding lr-padding-small">
             <ul class="progress-indicator custom-complex">
-              <li class="completed on-hover-pointer" ui-sref="hm.cart.details">
-                <a class="color-blue bold-font desc-text progress-a">
+              <li class="on-hover-pointer"  ng-repeat="step in cartData.steps" ng-class="{'completed': step.complete, 'pending': !step.complete}">
+                <a class="color-blue bold-font desc-text progress-a" ui-sref="{{step.path}}">
                       <span class="bubble">
                       </span>
-                  <i class="fa fa-check-circle color-blue"></i>&nbsp
-                  <span class="progress-span">Cart Summary</span>
+                  <i class="fa fa-check-circle color-blue" ng-if="step.complete"></i>&nbsp
+                  <span class="progress-span">{{step.name}}</span>
                 </a>
               </li>
-              <li class="pending on-hover-pointer" ui-sref="hm.cart.updateAddress">
-                <a class="color-blue bold-font desc-text progress-a">
-                      <span class="bubble">
-                      </span>
-                  <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span class="progress-span">Delivery Details</span>
-                </a>
-              </li>
-              <li class="pending on-hover-pointer" ui-sref="hm.cart.cartDuration">
-                <a href="" class="color-blue bold-font desc-text progress-a">
-                  <span class="bubble">
-                  </span>
-                  <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span class="progress-span">Duration</span>
-                </a>
-              </li>
-              <li class="pending on-hover-pointer" ui-sref="hm.cart.review">
-                <a href="" class="color-blue bold-font desc-text progress-a">
-                  <span class="bubble">
-                  </span>
-                  <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span class="progress-span">Review Order</span>
-                </a>
-              </li>
-              <li class="pending on-hover-pointer" ui-sref="hm.cart.payment">
-                <a href="" class="color-blue bold-font desc-text progress-a">
-                  <span class="bubble">
-                  </span>
-                  <!-- <i class="fa fa-check-circle"></i>&nbsp -->
-                  <span class="progress-span">Payment</span>
-                </a>
-              </li>
+              <!--<li class="pending on-hover-pointer" ui-sref="hm.cart.updateAddress">-->
+                <!--<a class="color-blue bold-font desc-text progress-a">-->
+                      <!--<span class="bubble">-->
+                      <!--</span>-->
+                  <!--&lt;!&ndash; <i class="fa fa-check-circle"></i>&nbsp &ndash;&gt;-->
+                  <!--<span class="progress-span">Delivery Details</span>-->
+                <!--</a>-->
+              <!--</li>-->
+              <!--<li class="pending on-hover-pointer" ui-sref="hm.cart.cartDuration">-->
+                <!--<a href="" class="color-blue bold-font desc-text progress-a">-->
+                  <!--<span class="bubble">-->
+                  <!--</span>-->
+                  <!--&lt;!&ndash; <i class="fa fa-check-circle"></i>&nbsp &ndash;&gt;-->
+                  <!--<span class="progress-span">Duration</span>-->
+                <!--</a>-->
+              <!--</li>-->
+              <!--<li class="pending on-hover-pointer" ui-sref="hm.cart.review">-->
+                <!--<a href="" class="color-blue bold-font desc-text progress-a">-->
+                  <!--<span class="bubble">-->
+                  <!--</span>-->
+                  <!--&lt;!&ndash; <i class="fa fa-check-circle"></i>&nbsp &ndash;&gt;-->
+                  <!--<span class="progress-span">Review Order</span>-->
+                <!--</a>-->
+              <!--</li>-->
+              <!--<li class="pending on-hover-pointer" ui-sref="hm.cart.payment">-->
+                <!--<a href="" class="color-blue bold-font desc-text progress-a">-->
+                  <!--<span class="bubble">-->
+                  <!--</span>-->
+                  <!--&lt;!&ndash; <i class="fa fa-check-circle"></i>&nbsp &ndash;&gt;-->
+                  <!--<span class="progress-span">Payment</span>-->
+                <!--</a>-->
+              <!--</li>-->
             </ul>
           </div>
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 bord_dash_bot devider-bottom"></div>
