--- a/src/app/search/list.html
+++ b/src/app/search/list.html
@@ -63,9 +63,9 @@
 
     </div>
     <div class="col-md-3 right-btn-col">
-      <button ui-sref="hm.reserveEquipment({id :item.Product_Id})" type="button" class="btn all-btn my-reserve sell-equ" ng-disabled="item.alreadyExistsInCart" ng-class="{'is-added add-top': !item.Is_in_catelog, 'add-top': item.Is_in_catelog }">Add{{item.alreadyExistsInCart ? 'ed' : ''}} to Cart</button>
+      <button ui-sref="hm.reserveEquipment({id :item.Product_Id})" type="button" class="btn all-btn my-reserve sell-equ" ng-disabled="item.alreadyExistsInCart" ng-class="{'is-added add-top': item.Is_in_catelog, 'add-top': !item.Is_in_catelog }">Add{{item.alreadyExistsInCart ? 'ed' : ''}} to Cart</button>
       <button type="button" class="btn add-list all-btn sell-equ add-top" ng-click="addToOrRemoveFromWishList(item)">
-        <span btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id">{{item.Is_in_catelog ? 'Add to Catalog': 'Added to Catalog'}}</span>
+        <span btn-load-indicator="Add:Wishlist:Process" btn-uid="item.Product_Id">{{item.Is_in_catelog ? 'Added to Catalog': 'Add to Catalog'}}</span>
       </button>
     </div>
     <!-- <div class="col-md-12"><hr class="dash"></div> -->
