--- a/src/app/cart/cart-payment.html
+++ b/src/app/cart/cart-payment.html
@@ -4,7 +4,7 @@
       <div class="pickup-delivery active-pickup-delivery payment-option pay-now">
         <input type="radio" name="get-option" ng-model="cartData.payment.paynow" value="true">
         <span class="go-back-text bold-font">Pay Now</span>
-        <p class="desc-text pickup-desc">Your Credit Card will be charged for the amount mentioned in cart summary. Any differences can be settled at last</p>
+        <p class="desc-text pickup-desc">Your Credit Card will be charged for the amount mentioned in cart summary. Any differences can be settled at last{}</p>
       </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 nopadding-small">
@@ -14,7 +14,7 @@
         <p class="desc-text pickup-desc">Your Credit Card will be charged for the amount mentioned in cart summary. Any differences can be settled at last</p>
       </div>
     </div>
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding nopadding-small credit-card-col" ng-show="cartData.payment.paynow == 'true'">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 lr-padding nopadding-small credit-card-col">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 leftpadding nopadding-small">
         <form action="#"
               name="cardForm"
@@ -35,7 +35,7 @@
           </div>
           <div>
             <input type="button" class="btn all-btn sell-equ btn-right-margin" value="Clear" data-ng-click="clear()" />
-            <!--<input type="button" class="btn all-btn sign_mybtn primary-btn" value="Confirm" data-ng-click="changeCard()" />-->
+            <input type="button" class="btn all-btn sign_mybtn primary-btn" value="Confirm" data-ng-click="changeCard()" />
           </div>
         </form>
       </div>
