focus on icon and equipment reserve page

--- a/src/app/cart/cart-review.html
+++ b/src/app/cart/cart-review.html
@@ -142,7 +142,7 @@
 	<!-- total price part start -->
 	<div class="col-lg-4 col-md-4 col-sm-5 col-xs-12 total-price">
     <div class="text-left total-price-padding">
-      <h3 class="desc-text topmargin">
+      <h3 class="desc-text">
         <span>Sub-Total Rental:</span>
         <span class="pull-right">${{cart.Sub_total}}</span>
       </h3>
