--- a/src/app/help/help.html
+++ b/src/app/help/help.html
@@ -13,14 +13,16 @@
                     <div class="form-control form-left your-need to-from-div">
                       <p class="pull-left to">To</p>
                       <input type="text" placeholder="dd/mm/yy">
-                      <img src="assets/images/calendar.png" class="pull-right">
+                      <i class="fa fa-calendar pull-right icon-right color-gray"></i>
+                      <!-- <img src="assets/images/calendar.png" class="pull-right"> -->
                     </div>
                   </div>
                   <div class="col-md-6 col2 col3 toppadding">
                     <div class="form-control form-left your-need to-from-div">
                       <p class="pull-left">From</p>
                       <input type="text" placeholder="dd/mm/yy">
-                      <img src="assets/images/calendar.png" class="pull-right">
+                      <i class="fa fa-calendar pull-right icon-right color-gray"></i>
+                      <!-- <img src="assets/images/calendar.png" class="pull-right"> -->
                     </div>
                   </div>
                   <div class="col-md-6 col2 col3 toppadding">
