--- a/src/app/equipment-reserve/equipment-reserve.html
+++ b/src/app/equipment-reserve/equipment-reserve.html
@@ -9,10 +9,6 @@
           <figure class="pull-center">
             <img ng-src="{{product.Product_Image[0].ProductImage_Path}}" alt="" class="equip-reserve-img">
           </figure>
-
-          <div class="col-md-12">
-            <p class="terms" ng-bind-html="product.Product_Description"></p>
-          </div>
           <!-- <div class="col-lg-6">
             <div class="form-group">
               <label for="email">Pickup Date</label>
@@ -45,42 +41,46 @@
         </div>
         <div class="col-lg-6 reserve-right">
           <form ng-submit="equipmentReserve()">
+            <h4 class="reserve_eqe_tit">
+              {{product.Product_Name}} {{product.MODEL}}
+              <!-- <span class="reserve_eqe_num text-center"></span> -->
+            </h4>
+            <div class="col-md-12">
+              <p class="terms text-right" ng-bind-html="product.Product_Description"></p>
+            </div>
+            <div class="daily_ul col-md-12">
+              <ul>
+                <li>
+                  <p class="daily_title">Daily</p>
+                  <p class="daily_price">${{product.Product_Price.Daily}}</p>
+                  <p class="daily_price_check">${{product.Product_Price.Daily}}</p>
+                </li>
+                <li>
+                  <p class="daily_title">Weekly</p>
+                  <p class="daily_price">${{product.Product_Price.Weekly}}</p>
+                  <p class="daily_price_check">${{product.Product_Price.Weekly}}</p>
+                </li>
+                <li>
+                  <p class="daily_title">Monthly</p>
+                  <p class="daily_price">${{product.Product_Price.Monthly}}</p>
+                  <p class="daily_price_check">${{product.Product_Price.Monthly}}</p>
+                </li>
+              </ul>
+            </div>
+            <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>-->
 
-
-          <h4 class="reserve_eqe_tit">
-            {{product.Product_Name}} {{product.MODEL}}
-            <!-- <span class="reserve_eqe_num text-center"></span> -->
-          </h4>
-          <div class="daily_ul">
-            <ul>
-              <li>
-                <p class="daily_title">Daily</p>
-                <p class="daily_price">${{product.Product_Price.Daily}}</p>
-                <p class="daily_price_check">${{product.Product_Price.Daily}}</p>
-              </li>
-              <li>
-                <p class="daily_title">Weekly</p>
-                <p class="daily_price">${{product.Product_Price.Weekly}}</p>
-                <p class="daily_price_check">${{product.Product_Price.Weekly}}</p>
-              </li>
-              <li>
-                <p class="daily_title">Monthly</p>
-                <p class="daily_price">${{product.Product_Price.Monthly}}</p>
-                <p class="daily_price_check">${{product.Product_Price.Monthly}}</p>
-              </li>
-            </ul>
-          </div>
-          <!--<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 total_price_popup">Total: <span class="total_price_cle">$349</span></div>-->
-
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quantity-btn to-from-div">
-            <input type="text" ng-value="quantity" ng-model="quantity" class="form-control"/>
-            <!--<a class="btn pull-right all-btn sign_mybtn primary-btn" href="" type="submit">Add Quantity</a>-->
-          </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <button class="btn all-btn sign_mybtn primary-btn pull-right" ng-click="equipmentReserve()" type="submit">
-              <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
-            </button>
-          </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 quantity-btn to-from-div">
+              <input type="text" ng-value="quantity" ng-model="quantity" class="form-control"/>
+              <!--<a class="btn pull-right all-btn sign_mybtn primary-btn" href="" type="submit">Add Quantity</a>-->
+            </div>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+              <button class="btn all-btn sign_mybtn primary-btn pull-right" ng-click="equipmentReserve()" type="submit">
+                <span btn-load-indicator="Equipment:Reserve:Process">Add to Cart</span>
+              </button>
+              <!-- <button class="btn all-btn sell-equ pull-right equipment-cancel" ng-click="$dismiss()">
+                Cancel
+              </button> -->
+            </div>
           </form>
         </div>
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 table-top">
